--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Latest donations",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
     "test": "test"
   },
   "repository": {
@@ -20,5 +22,19 @@
   "bugs": {
     "url": "https://github.com/roedit/charity/issues"
   },
-  "homepage": "https://github.com/roedit/charity#readme"
+  "homepage": "https://github.com/roedit/charity#readme",
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
+  }
 }
